[gd_scene load_steps=34 format=3 uid="uid://vb1dnys1y5lm"]

[ext_resource type="Script" uid="uid://j3ho6q5fycib" path="res://addons/gevp/scripts/vehicle.gd" id="1_4ggqu"]
[ext_resource type="PackedScene" uid="uid://h6vdpba71kpr" path="res://addons/gevp/scenes/smoke_effect.tscn" id="2_m3ghh"]
[ext_resource type="Script" uid="uid://c7m6oo4hut382" path="res://Games/cars/scripts/lights.gd" id="7_58fu3"]
[ext_resource type="AudioStream" uid="uid://c8w7ia3ify8d6" path="res://Games/cars/audio/mitsubishi_lancer.wav" id="13_e3hr5"]
[ext_resource type="PackedScene" uid="uid://cu6t5ekb7tvhu" path="res://Games/cars/models/mitsubishi_ln_glb/mitsubishi_lancer_evo.tscn" id="16_35gkw"]
[ext_resource type="PackedScene" uid="uid://dbsjm2xub5u8u" path="res://Games/cars/models/radio/radio.tscn" id="18_e3hr5"]
[ext_resource type="AudioStream" uid="uid://bngrkkj3vvav2" path="res://Games/cars/audio/BOV2.wav" id="19_3jtcl"]
[ext_resource type="Script" uid="uid://m4rd2xovd0yt" path="res://addons/simusdev/multiplayer/SD_MPSyncedAudioStreamPlayer3D.gd" id="20_7hsr3"]
[ext_resource type="AudioStream" uid="uid://c4rriuolr2h1e" path="res://Games/cars/audio/gear whine D^c.wav" id="21_7hsr3"]
[ext_resource type="AudioStream" uid="uid://oix4umixuuje" path="res://Games/cars/audio/tyre_skid.wav" id="22_n5moq"]
[ext_resource type="Script" uid="uid://u5mlrd6jl488" path="res://Games/cars/scripts/tyre_squeal_system.gd" id="22_ttrvv"]
[ext_resource type="Script" uid="uid://3f6u8rvldkah" path="res://addons/gevp/scripts/wheel.gd" id="29_pth8k"]
[ext_resource type="PackedScene" uid="uid://rssl24l7550f" path="res://maps/scenes/vlados_parkur_swag/scenes/car_wheel.tscn" id="30_noejd"]
[ext_resource type="PackedScene" uid="uid://c3ixqkc6k13yi" path="res://addons/gevp/scenes/vehicle_controller.tscn" id="31_ipntc"]
[ext_resource type="Script" uid="uid://cofim6dvmtmj0" path="res://game_components/AuthorityChecker.gd" id="32_psj4l"]
[ext_resource type="Script" uid="uid://5by2ms76p5wg" path="res://addons/simusdev/multiplayer/SD_MPPropertySynchronizer.gd" id="33_3b4ke"]
[ext_resource type="Script" uid="uid://vem3fl0vut75" path="res://addons/simusdev/multiplayer/SD_MPPSSyncedBase.gd" id="34_3ivww"]
[ext_resource type="Script" uid="uid://cvr8rp4fvo3m0" path="res://addons/simusdev/multiplayer/SD_MPPSSyncedProperty.gd" id="35_rsmr8"]
[ext_resource type="PackedScene" uid="uid://b2hlchrj4h2b7" path="res://addons/gevp/scenes/engine_sound.tscn" id="36_gpemh"]
[ext_resource type="Script" uid="uid://c7hu5fiwywarj" path="res://addons/gevp/scripts/camera.gd" id="38_1sohf"]
[ext_resource type="Script" uid="uid://0ksyaacptcju" path="res://game_components/CameraSwitcher.gd" id="39_v5qyq"]
[ext_resource type="Script" uid="uid://bfwmd61l77jvr" path="res://scenes/cars/DriverSeat.gd" id="40_tbn5b"]
[ext_resource type="Script" uid="uid://dar7l6igeudpk" path="res://addons/simusdev/components/interactables/W_Interactable.gd" id="41_0sbg7"]

[sub_resource type="Curve" id="Curve_bt7kc"]
_data = [Vector2(0, 0.494505), 0.0, 2.04495, 0, 0, Vector2(0.767241, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.758242), -2.03956, 0.0, 0, 0]
point_count = 3

[sub_resource type="BoxShape3D" id="BoxShape3D_yyyvj"]
size = Vector3(2.04233, 1.30232, 4.6)

[sub_resource type="Resource" id="Resource_yi43l"]
script = ExtResource("35_rsmr8")
tickrate = 32.0
tickrate_mode = 0
sync_mode = 0
properties = Array[String](["transform"])
sync_at_start = true
interpolation_enabled = true
interpolation_speed = 30.0
node_path = NodePath("..")
reliable = false
mode = 1
metadata/_custom_type_script = "uid://cvr8rp4fvo3m0"

[sub_resource type="Resource" id="Resource_b1e7m"]
script = ExtResource("35_rsmr8")
tickrate = 32.0
tickrate_mode = 0
sync_mode = 0
properties = Array[String](["rotation"])
sync_at_start = true
interpolation_enabled = true
interpolation_speed = 30.0
node_path = NodePath("../WheelFrontLeft/FrontLeftWheel")
reliable = false
mode = 1
metadata/_custom_type_script = "uid://cvr8rp4fvo3m0"

[sub_resource type="Resource" id="Resource_aq5ct"]
script = ExtResource("35_rsmr8")
tickrate = 32.0
tickrate_mode = 0
sync_mode = 0
properties = Array[String](["rotation"])
sync_at_start = true
interpolation_enabled = true
interpolation_speed = 30.0
node_path = NodePath("../WheelFrontRight/FrontRightWheel")
reliable = false
mode = 1
metadata/_custom_type_script = "uid://cvr8rp4fvo3m0"

[sub_resource type="Resource" id="Resource_uvl71"]
script = ExtResource("35_rsmr8")
tickrate = 32.0
tickrate_mode = 0
sync_mode = 0
properties = Array[String](["rotation"])
sync_at_start = true
interpolation_enabled = true
interpolation_speed = 30.0
node_path = NodePath("../WheelRearLeft/RearLeftWheel")
reliable = false
mode = 1
metadata/_custom_type_script = "uid://cvr8rp4fvo3m0"

[sub_resource type="Resource" id="Resource_8mpxf"]
script = ExtResource("35_rsmr8")
tickrate = 32.0
tickrate_mode = 0
sync_mode = 0
properties = Array[String](["rotation"])
sync_at_start = true
interpolation_enabled = true
interpolation_speed = 30.0
node_path = NodePath("../WheelRearRight/RearRightWheel")
reliable = false
mode = 1
metadata/_custom_type_script = "uid://cvr8rp4fvo3m0"

[sub_resource type="Resource" id="Resource_a82us"]
script = ExtResource("35_rsmr8")
tickrate = 32.0
tickrate_mode = 0
sync_mode = 0
properties = Array[String](["motor_rpm", "throttle_amount"])
sync_at_start = true
interpolation_enabled = false
interpolation_speed = 30.0
node_path = NodePath("..")
reliable = false
mode = 1
metadata/_custom_type_script = "uid://cvr8rp4fvo3m0"

[sub_resource type="Resource" id="Resource_l7flc"]
script = ExtResource("35_rsmr8")
tickrate = 32.0
tickrate_mode = 0
sync_mode = 1
properties = Array[String](["emiting"])
sync_at_start = true
interpolation_enabled = false
interpolation_speed = 30.0
node_path = NodePath("../Smoke")
reliable = false
mode = 1
metadata/_custom_type_script = "uid://cvr8rp4fvo3m0"

[sub_resource type="BoxShape3D" id="BoxShape3D_l7flc"]
size = Vector3(0.619104, 1.05707, 0.945251)

[node name="mitsubishi_lancer" type="RigidBody3D" node_paths=PackedStringArray("driver_seat", "front_left_wheel", "front_right_wheel", "rear_left_wheel", "rear_right_wheel")]
script = ExtResource("1_4ggqu")
driver_seat = NodePath("DriverSeat")
min_slip_for_track = 0.6
track_spacing = 0.1
track_lifetime = 2.0
front_left_wheel = NodePath("WheelFrontLeft")
front_right_wheel = NodePath("WheelFrontRight")
rear_left_wheel = NodePath("WheelRearLeft")
rear_right_wheel = NodePath("WheelRearRight")
steering_slip_assist = 0.5
countersteer_assist = 0.75
max_steering_angle = 1.2
stability_yaw_engage_angle = 0.1
stability_yaw_strength = 2.0
stability_yaw_ground_multiplier = 4.0
max_torque = 800.0
max_rpm = 6500.0
torque_curve = SubResource("Curve_bt7kc")
motor_moment = 0.3
clutch_out_rpm = 0.0
gear_ratios = Array[float]([3.01, 2.07, 1.43, 1.0, 0.84, 0.5])
final_drive = 4.1
reverse_ratio = 3.28
shift_time = 0.25
automatic_transmission = false
front_variable_split = 0.5
vehicle_mass = 1400.0
front_weight_distribution = 0.526
center_of_gravity_height_offset = -0.14
front_resting_ratio = 0.6
front_damping_ratio = 0.8
front_arb_ratio = 0.5
front_camber = 0.034
front_toe = 0.005
rear_resting_ratio = 0.6
rear_damping_ratio = 0.8
rear_arb_ratio = 0.5
rear_camber = 0.034
rear_toe = 0.005
tire_stiffnesses = {
"Dirt": 0.5,
"Grass": 0.5,
"Road": 20.0
}
coefficient_of_friction = {
"Dirt": 1.4,
"Grass": 1.0,
"Road": 2.0
}
longitudinal_grip_ratio = {
"Dirt": 0.56,
"Grass": 0.8,
"Road": 0.6
}
front_tire_radius = 0.38
rear_tire_radius = 0.38
rear_tire_width = 275.0
coefficient_of_drag = 0.35
frontal_area = 2.19

[node name="VehicleController" parent="." node_paths=PackedStringArray("driver_seat", "vehicle_node") instance=ExtResource("31_ipntc")]
driver_seat = NodePath("../DriverSeat")
vehicle_node = NodePath("..")

[node name="mitsubishi" parent="." node_paths=PackedStringArray("vehicle") instance=ExtResource("16_35gkw")]
vehicle = NodePath("..")

[node name="Smoke" parent="." node_paths=PackedStringArray("vehicle") instance=ExtResource("2_m3ghh")]
process_mode = 3
vehicle = NodePath("..")
longitudinal_slip_threshold = 0.4

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0118897, 0.797113, 0.00985546)
shape = SubResource("BoxShape3D_yyyvj")

[node name="WheelFrontLeft" type="RayCast3D" parent="." node_paths=PackedStringArray("wheel_node")]
transform = Transform3D(1, -8.47033e-22, 7.10543e-15, -8.47033e-22, 1, 1.42109e-14, 7.10543e-15, -1.42109e-14, 1, -0.928666, 0.314756, -1.32358)
script = ExtResource("29_pth8k")
wheel_node = NodePath("FrontLeftWheel")

[node name="FrontLeftWheel" type="Node3D" parent="WheelFrontLeft"]

[node name="car_wheel" parent="WheelFrontLeft/FrontLeftWheel" instance=ExtResource("30_noejd")]
transform = Transform3D(-1, -4.23516e-22, -8.74228e-08, 3.55271e-15, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="WheelFrontRight" type="RayCast3D" parent="." node_paths=PackedStringArray("wheel_node")]
transform = Transform3D(1, -8.47033e-22, 7.10543e-15, -8.47033e-22, 1, 1.42109e-14, 7.10543e-15, -1.42109e-14, 1, 0.929, 0.314443, -1.324)
script = ExtResource("29_pth8k")
wheel_node = NodePath("FrontRightWheel")

[node name="FrontRightWheel" type="Node3D" parent="WheelFrontRight"]

[node name="car_wheel" parent="WheelFrontRight/FrontRightWheel" instance=ExtResource("30_noejd")]
transform = Transform3D(1, -8.74228e-08, -8.74228e-08, -8.74228e-08, -1, 0, -8.74228e-08, 7.64274e-15, -1, 0, 0, 0)

[node name="WheelRearLeft" type="RayCast3D" parent="." node_paths=PackedStringArray("wheel_node")]
transform = Transform3D(1, -8.47033e-22, 7.10543e-15, -8.47033e-22, 1, 1.42109e-14, 7.10543e-15, -1.42109e-14, 1, -0.894, 0.318443, 1.312)
script = ExtResource("29_pth8k")
wheel_node = NodePath("RearLeftWheel")

[node name="RearLeftWheel" type="Node3D" parent="WheelRearLeft"]

[node name="car_wheel" parent="WheelRearLeft/RearLeftWheel" instance=ExtResource("30_noejd")]
transform = Transform3D(-1, -4.5171e-22, -8.74228e-08, -2.93642e-21, 1, 2.84218e-14, 8.74228e-08, 2.84218e-14, -1, 0, 0, 0)

[node name="WheelRearRight" type="RayCast3D" parent="." node_paths=PackedStringArray("wheel_node")]
transform = Transform3D(1, -8.47033e-22, 7.10543e-15, -8.47033e-22, 1, 1.42109e-14, 7.10543e-15, -1.42109e-14, 1, 0.894, 0.318443, 1.312)
script = ExtResource("29_pth8k")
wheel_node = NodePath("RearRightWheel")

[node name="RearRightWheel" type="Node3D" parent="WheelRearRight"]

[node name="car_wheel" parent="WheelRearRight/RearRightWheel" instance=ExtResource("30_noejd")]

[node name="lights" type="Node3D" parent="." node_paths=PackedStringArray("vehicle", "front_lights", "rear_lights")]
script = ExtResource("7_58fu3")
vehicle = NodePath("..")
front_lights = [NodePath("FL"), NodePath("FL2"), NodePath("FR"), NodePath("FR2")]
rear_lights = [NodePath("RL"), NodePath("RL2"), NodePath("RR"), NodePath("RR2")]

[node name="FL" type="SpotLight3D" parent="lights"]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0.587, 0.593, -2.09379)
light_color = Color(1, 1, 0.52549, 1)
light_energy = 6.0
shadow_enabled = true
spot_range = 60.0
spot_angle = 60.0

[node name="OmniLight3D" type="OmniLight3D" parent="lights/FL"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0419654, 0.156617)
light_color = Color(1, 1, 0.52549, 1)
shadow_enabled = true

[node name="FL2" type="SpotLight3D" parent="lights"]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0.486866, 0.575698, -2.15256)
light_color = Color(1, 1, 0.52549, 1)
light_energy = 6.0
shadow_enabled = true
spot_range = 60.0
spot_angle = 60.0

[node name="OmniLight3D" type="OmniLight3D" parent="lights/FL2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00206029, -0.039382, 0.118558)
light_color = Color(1, 1, 0.52549, 1)
shadow_enabled = true

[node name="FR" type="SpotLight3D" parent="lights"]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, -0.587235, 0.592693, -2.09357)
light_color = Color(1, 1, 0.52549, 1)
light_energy = 6.0
shadow_enabled = true
spot_range = 60.0
spot_angle = 60.0

[node name="OmniLight3D" type="OmniLight3D" parent="lights/FR"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0419654, 0.156617)
light_color = Color(1, 1, 0.52549, 1)
shadow_enabled = true

[node name="FR2" type="SpotLight3D" parent="lights"]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, -0.496494, 0.583571, -2.16283)
light_color = Color(1, 1, 0.52549, 1)
light_energy = 6.0
shadow_enabled = true
spot_range = 60.0
spot_angle = 60.0

[node name="OmniLight3D" type="OmniLight3D" parent="lights/FR2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0474484, 0.135953)
light_color = Color(1, 1, 0.52549, 1)
shadow_enabled = true

[node name="OmniLight3D" type="OmniLight3D" parent="lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000827035, 1.32481, 0.276602)
light_color = Color(1, 1, 0.792157, 1)
light_energy = 0.451
shadow_enabled = true

[node name="RL" type="OmniLight3D" parent="lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.601287, 0.803443, 2.11977)
light_color = Color(1, 0, 0, 1)
shadow_enabled = true

[node name="RL2" type="OmniLight3D" parent="lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.727133, 0.797752, 2.04551)
light_color = Color(1, 0, 0, 1)

[node name="RR" type="OmniLight3D" parent="lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.601, 0.803443, 2.11977)
light_color = Color(1, 0, 0, 1)
shadow_enabled = true

[node name="RR2" type="OmniLight3D" parent="lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.73034, 0.797752, 2.04302)
light_color = Color(1, 0, 0, 1)

[node name="AuthorityChecker" type="Node" parent="." node_paths=PackedStringArray("node")]
script = ExtResource("32_psj4l")
node = NodePath("..")

[node name="SD_MPPropertySynchronizer" type="Node" parent="."]
process_mode = 3
script = ExtResource("33_3b4ke")
properties = Array[ExtResource("34_3ivww")]([SubResource("Resource_yi43l"), SubResource("Resource_b1e7m"), SubResource("Resource_aq5ct"), SubResource("Resource_uvl71"), SubResource("Resource_8mpxf"), SubResource("Resource_a82us"), SubResource("Resource_l7flc")])

[node name="EngineSound" parent="." node_paths=PackedStringArray("vehicle", "turbo_charger", "spool_sound") instance=ExtResource("36_gpemh")]
process_mode = 3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.522851, 0.254039, 2.19682)
stream = ExtResource("13_e3hr5")
unit_size = 11.75
max_distance = 110.71
vehicle = NodePath("..")
sample_rpm = 800.0
turbo_charger = NodePath("../blow-off")
spool_sound = NodePath("../spool_sound")

[node name="Node" type="Node" parent="."]

[node name="Camera3D" type="Camera3D" parent="Node" node_paths=PackedStringArray("follow_this")]
transform = Transform3D(1, 0, 0, 0, 0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 3.38254, 4)
fov = 81.1
script = ExtResource("38_1sohf")
follow_this = NodePath("../..")

[node name="CameraSwitcher" type="Node" parent="." node_paths=PackedStringArray("vehicle_controller", "_cameras")]
script = ExtResource("39_v5qyq")
vehicle_controller = NodePath("../VehicleController")
_cameras = [NodePath("../Node/Camera3D")]
metadata/_custom_type_script = "uid://0ksyaacptcju"

[node name="DriverSeat" type="Area3D" parent="." node_paths=PackedStringArray("link_point", "interactable_area", "camera_switcher")]
collision_layer = 2
collision_mask = 2
script = ExtResource("40_tbn5b")
link_point = NodePath("point")
interactable_area = NodePath("W_InteractableArea3D")
camera_switcher = NodePath("../CameraSwitcher")

[node name="W_InteractableArea3D" type="Node" parent="DriverSeat" node_paths=PackedStringArray("area")]
script = ExtResource("41_0sbg7")
area = NodePath("..")
metadata/_custom_type_script = "uid://dar7l6igeudpk"

[node name="CollisionShape3D" type="CollisionShape3D" parent="DriverSeat"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.912067, 0.847354, -0.240475)
shape = SubResource("BoxShape3D_l7flc")

[node name="point" type="Node3D" parent="DriverSeat"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.405114, 0.251361, -0.180016)

[node name="radio" parent="." instance=ExtResource("18_e3hr5")]
transform = Transform3D(-1, 0, -8.74228e-08, 3.33721e-08, 0.924273, -0.381732, 8.08025e-08, -0.381732, -0.924273, -0.0440557, 0.707497, -0.624072)

[node name="blow-off" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.447149, 0.766353, -1.35871)
stream = ExtResource("19_3jtcl")
unit_size = 5.0
max_db = 0.284
max_distance = 48.15
script = ExtResource("20_7hsr3")
metadata/_custom_type_script = "uid://m4rd2xovd0yt"

[node name="spool_sound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.646788, -1.14555)
stream = ExtResource("21_7hsr3")
unit_size = 5.0
max_db = 0.216
autoplay = true
max_distance = 34.2
playback_type = 1
script = ExtResource("20_7hsr3")
metadata/_custom_type_script = "uid://m4rd2xovd0yt"

[node name="TireSquealSystem" type="Node3D" parent="." node_paths=PackedStringArray("vehicle", "audio_players")]
script = ExtResource("22_ttrvv")
vehicle = NodePath("..")
audio_players = [NodePath("tyre_skid"), NodePath("tyre_skid2"), NodePath("tyre_skid3"), NodePath("tyre_skid4")]
min_pitch = 0.4
max_pitch = 1.5
volume_threshold = 0.5
metadata/_custom_type_script = "uid://u5mlrd6jl488"

[node name="tyre_skid" type="AudioStreamPlayer3D" parent="TireSquealSystem"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.772856, 0, 1.28743)
stream = ExtResource("22_n5moq")
unit_size = 5.0
autoplay = true
script = ExtResource("20_7hsr3")
metadata/_custom_type_script = "uid://m4rd2xovd0yt"

[node name="tyre_skid2" type="AudioStreamPlayer3D" parent="TireSquealSystem"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.79069, 0, 1.30808)
stream = ExtResource("22_n5moq")
unit_size = 5.0
autoplay = true
script = ExtResource("20_7hsr3")
metadata/_custom_type_script = "uid://m4rd2xovd0yt"

[node name="tyre_skid3" type="AudioStreamPlayer3D" parent="TireSquealSystem"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.79069, 0, -1.32899)
stream = ExtResource("22_n5moq")
unit_size = 5.0
autoplay = true
script = ExtResource("20_7hsr3")
metadata/_custom_type_script = "uid://m4rd2xovd0yt"

[node name="tyre_skid4" type="AudioStreamPlayer3D" parent="TireSquealSystem"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.803694, 0, -1.31886)
stream = ExtResource("22_n5moq")
unit_size = 5.0
autoplay = true
script = ExtResource("20_7hsr3")
metadata/_custom_type_script = "uid://m4rd2xovd0yt"

[connection signal="interacted" from="DriverSeat/W_InteractableArea3D" to="DriverSeat" method="_on_w_interactable_area_3d_interacted"]
